--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Description" content="Code pour le TP1 de INF8808.">
-        <title>TP4 | INF8808</title>
+        <title>INF8808 Project</title>
 
         <link rel="stylesheet" href="assets/style.css">
 
