--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/typography.css">
+        <title>INF8808E - Team 02</title>
     </head>
     <body>
       <header>
         <h1>
-          Heatmap - Morocco
+          Performance de l'équipe nationale du Maroc : Analyse Statistique 
         </h1>
         <h2>
-          World Cup 2022
+          Coupe du Monde 2022
         </h2>
       </header>
       <main>
