--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,16 @@
           Coupe du Monde 2022
         </h2>
       </header>
+
       <main>
-        <div class="heatmap-container">
-          <div class="graph" id="heatmap">
-            <svg class="heatmap-svg"></svg>
-          </div>
+        <div class="viz4-container">
+          <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
         </div>
+
+
+
       </main>
+
       <script src="https://d3js.org/d3.v7.js"></script>
       <script type="module" src="index.js"></script>
     </body>
