--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,12 @@
       </header>
 
       <main>
+
+        <div>
+          <div class="viz1-container"></div>
+        </div>
+
+
         <div class="viz4-container">
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
         </div>
