--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
 
         <div class="viz1-container"></div>
 
-        <div class="viz3-container"></div>
+        <div class="graph-container">
+          <div class="graph" id="graph"></div>
+        </div>
 
         <div class="viz4-container">
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
