--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/typography.css">
+        <link rel="stylesheet" href="assets/tooltip.css">
         <title>INF8808E - Team 02</title>
     </head>
     <body>
@@ -25,6 +26,22 @@
 
         <div class="viz4-container">
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
+        </div>
+
+        <div>
+          <div class="viz2-main">
+            <div class="viz2-container">
+              <div class="viz2-graph" id="viz2-bar-chart">
+                <svg class="viz2-main-svg"></svg>
+              </div>
+            </div>
+          </div>
+              <div class='viz2-legend-title'>
+                <p>
+                  Légende  
+                  <div class='viz2-legend'></div>
+                </p>
+              </div>
         </div>
 
         <div class="viz6-container"></div>
