--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,15 @@
                 </p>
               </div>
         </div>
-
+        <div class="page-container">
+        <div >
+          <h2 class="markdown-title ">Apport offensif des joueurs</h2>
+        </div> 
+        <div >
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; À travers du graphique suivant, nous pouvons voir quels joueurs ont été les moteurs de l'attaque marocaine lors de la Coupe du Monde: </p>
+        </div>
         <div class="viz6-container"></div>
-
+        </div>
       </main>
 
       <script src="https://d3js.org/d3.v7.js"></script>
