--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
           <h2 class="markdown-title ">Apport offensif des joueurs</h2>
         </div> 
         <div >
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; À travers du graphique suivant, nous pouvons voir quels joueurs ont été les moteurs de l'attaque marocaine lors de la Coupe du Monde: </p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; À travers du graphique suivant, nous pouvons voir quels joueurs ont été les moteurs de l'attaque marocaine lors de la Coupe du Monde. On en déduit que Hakim Ziyech, Achraf Hakimi et Azzedine Ounahi sont les joueurs qui ont contribué le plus offensivement. </p>
         </div>
         <div class="viz6-container"></div>
         </div>
