--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
           <div class="viz1-container"></div>
         </div>
 
+        <div class="viz1-container"></div>
 
         <div class="graph-container">
           <div class="graph" id="graph"></div>
@@ -64,7 +65,17 @@
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
         </div>
 
+        <!-- viz 2 starts here -->
+        
         <div>
+          <div class="page-container">
+            <div>
+              <h2 class="markdown-title ">Le Maroc à la Coupe du Monde 2022 : Une Défense Solide</h2>
+            </div> 
+            <div >
+              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malgré un nombre inférieur de buts marqués par rapport à ses adversaires (6 buts), l'équipe nationale du Maroc a démontré une solide performance défensive lors de la Coupe du Monde 2022, en encaissant seulement 4 buts. Le différentiel de buts positif (+2) témoigne de la réussite de l'équipe à maintenir une balance favorable, malgré un nombre moins élevé de buts marqués. Cette performance met en évidence une équipe marocaine résiliente et stratégiquement axée sur la défense. Pourtant, pour accroître son efficacité dans les compétitions futures, le Maroc pourrait chercher à améliorer son attaque, tout en conservant ses forces défensives.</p>
+            </div>
+          </div>
           <div class="viz2-main">
             <div class="viz2-container">
               <div class="viz2-graph" id="viz2-bar-chart">
@@ -79,7 +90,6 @@
                 </p>
               </div>
         </div>
-
         <div class="viz6-container"></div>
 
       </main>
