feat: radar circles and radar lines with labels

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
         </div>
 
+        <div class="viz5-container">
+          </div>
+
         <div class="viz6-container"></div>
 
       </main>
