AF : commented line 58

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           <div class="viz1-container"></div>
         </div>
 
-        <div class="viz1-container"></div>
+        <!-- <div class="viz1-container"></div> -->
 
         <div class="graph-container">
           <div class="graph" id="graph"></div>
