--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
       <main>
         <div class="page-container">
           <div >
-            <h2 class="markdown-title ">Comparaison des résultats des quatres équipes demi-finalistes</h2>
+            <h2 class="markdown-title ">Comment le Maroc se compare aux autres équipes demi-finalistes en terme de résultats ?</h2>
           </div> 
           <div >
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On peut remarquer que le Maroc a obtenu des résultats relativement similaires à ceux de l'Argentine, de la France et de la Croatie en termes de victoires et de défaites</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nous pouvons remarquer que le Maroc a obtenu des résultats relativement similaires à ceux de l'Argentine, de la France et de la Croatie en termes de victoires et de défaites</p>
           </div>
           
           <div class="viz1-container"></div>
@@ -61,8 +61,18 @@
           <div class="graph" id="graph"></div>
         </div>
 
-        <div class="viz4-container">
+
+        <div class="page-container">
+          <div >
+            <h2 class="markdown-title ">Comment le Maroc a performé dans chaque match ?</h2>
+          </div> 
+          <div >
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malgré le faible pourcentage de possession tout au long du tournoi, les Lions de l'Atlas sont restés consistants et ont su se battre contre les géants du football mondial. Nous pouvons remarquer que le taux de passes réussies est un facteur significatif au succès du Maroc. En effet, l'équipe a su gardé un taux particulièrement élevé durant toute la compétition.   </p>
+          </div>
+          
+          <div class="viz4-container">
           <div class="viz4-graph"><svg class="viz4-svg"></svg></div>
+          </div>
         </div>
 
         <!-- viz 2 starts here -->
@@ -70,10 +80,10 @@
         <div>
           <div class="page-container">
             <div>
-              <h2 class="markdown-title ">Le Maroc à la Coupe du Monde 2022 : Une Défense Solide</h2>
+              <h2 class="markdown-title ">À quel point la défense du Maroc est solide ?</h2>
             </div> 
             <div >
-              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malgré un nombre inférieur de buts marqués par rapport à ses adversaires (6 buts), l'équipe nationale du Maroc a démontré une solide performance défensive lors de la Coupe du Monde 2022, en encaissant seulement 4 buts. Le différentiel de buts positif (+2) témoigne de la réussite de l'équipe à maintenir une balance favorable, malgré un nombre moins élevé de buts marqués. Cette performance met en évidence une équipe marocaine résiliente et stratégiquement axée sur la défense. Pourtant, pour accroître son efficacité dans les compétitions futures, le Maroc pourrait chercher à améliorer son attaque, tout en conservant ses forces défensives.</p>
+              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malgré un nombre inférieur de buts marqués par rapport à ses adversaires (6 buts), l'équipe nationale du Maroc a démontré une solide performance défensive lors de la Coupe du Monde 2022, en encaissant seulement 4 buts. Le différentiel de buts positif (+2) témoigne de la réussite de l'équipe à maintenir une balance favorable, malgré un nombre moins élevé de buts marqués. Cette performance met en évidence une équipe marocaine résiliente et stratégiquement axée sur la défense.</p>
             </div>
           </div>
           <div class="viz2-main">
@@ -92,10 +102,10 @@
         </div>
         <div class="page-container">
         <div >
-          <h2 class="markdown-title ">Apport offensif des joueurs</h2>
+          <h2 class="markdown-title ">Qui sont les joueurs ayant le plus contribués offensivement ?</h2>
         </div> 
         <div >
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; À travers du graphique suivant, nous pouvons voir quels joueurs ont été les moteurs de l'attaque marocaine lors de la Coupe du Monde. On en déduit que Hakim Ziyech, Achraf Hakimi et Azzedine Ounahi sont les joueurs qui ont contribué le plus offensivement. </p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nous pouvons facilement observer quels joueurs ont été les moteurs de l'attaque marocaine lors de la Coupe du Monde. Nous en déduisons que Hakim Ziyech, Achraf Hakimi et Azzedine Ounahi sont les joueurs ayant contribué le plus offensivement. </p>
         </div>
         <div class="viz6-container"></div>
         </div>
