texte pour viz3

--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,18 @@
           <div class="viz1-container"></div>
         </div>
 
-        <!-- <div class="viz1-container"></div> -->
-
-        <div class="graph-container">
-          <div class="graph" id="graph"></div>
+        <div class="page-container">
+          <div >
+            <h2 class="markdown-title ">Comment le Maroc s'est comporté sur le terrain en terme de discipline ?</h2>
+          </div> 
+          <div >
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malgré le carton rouge recu par l'équipe du Maroc, nous pouvons remarquer que l'équipe d'Argentine est celle ayant recue le plus de sanctions disciplinaires (cartons jaunes et rouges)</p>
+          </div>
+          
+          <div class="viz3-container"></div>
         </div>
 
-
+      
         <div class="page-container">
           <div >
             <h2 class="markdown-title ">Comment le Maroc a performé dans chaque match ?</h2>
