--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<script src="https://d3js.org/d3.v7.js"></script>
+<script type="module" src="index.js"></script>
 <html>
 
 <head>
