AF : added viz7

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,6 @@
         relativement similaires à ceux de l'Argentine, de la France et de la Croatie en termes de victoires et de
         défaites</p>
     </div>
-
     <div class="viz1-container"></div>
   </div>
         <div class="page-container">
@@ -142,6 +141,18 @@
 
 
       <div class="viz6-container"></div>
+    </div>
+
+   
+    <div class="page-container">
+      <div>
+        <h2 class="markdown-title ">Quelle est l'efficacité des buteurs marocains?</h2>
+      </div>
+      <div>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; L'efficacité des buteurs marocains lors de la Coupe du Monde 2022 s'est avérée variée et décisive. Youssef En-Nesyri s'est distingué comme le buteur le plus prolifique, ayant marqué deux buts sur neuf tentatives, démontrant une précision clé pour l'équipe. Hakim Ziyech, malgré une activité offensive élevée avec dix tentatives, n'a réussi à convertir qu'une seule en but. Par ailleurs, Zakaria Aboukhlal, Romain Saïss et Achraf Dari ont tous marqué un but, avec Aboukhlal atteignant cette performance en seulement trois tentatives, tandis que Saïss et Dari ont démontré une efficacité exceptionnelle en marquant sur leur unique tentative. Ces performances soulignent la capacité de l'équipe marocaine à marquer dans des moments cruciaux, indépendamment du volume total de tirs. </p>
+      </div>
+    
+      <div class="viz7-container"></div>
     </div>
 
   </main>
