fix: clean code

--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,9 @@
   <link rel="stylesheet" href="./assets/typography.css">
   <link rel="stylesheet" href="./assets/tooltip.css">
   <title>INF8808E - Team 02</title>
-  <style>
-    header {
-      background-image: linear-gradient(to bottom, transparent 30%, white), url('.\assets\images\morocco.jpg');
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      height: auto;
-      min-height: 90%;
-    }
-  </style>
 </head>
 <body>
-  <header>
+  <header class="header">
     <div>
       <div class="welcome-title">Équipe Nationale du Maroc, la Gloire d'une Nation - Analyse Statistique de la Coupe du Monde 2022</div>
     </div>
