AF : !IMPORTANT!  added hover in viz 6 but the design does not match the rest

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,7 @@
     </div>
 
     <div class="page-container">
+      <div class="viz6-tooltip" style="opacity:0;"></div>
       <div>
         <h2 class="markdown-title">Qui Sont les Joueurs ayant le Plus Contribué Offensivement&nbsp;?</h2>
       </div>
